<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            app:srcCompat="@drawable/rp_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/rp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/description" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonModule1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_rectangle"
        android:text="@string/module1"
        app:backgroundTint="#4CAF50" />

    <Button
        android:id="@+id/buttonModule2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_rectangle"
        android:text="@string/module2"
        app:backgroundTint="#000000" />

    <Button
        android:id="@+id/buttonModule3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_rectangle"
        android:text="@string/module3"
        app:backgroundTint="#4CAF50" />

    <Button
        android:id="@+id/buttonModule4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_rectangle"
        android:text="@string/module4"
        app:backgroundTint="#000000" />

    <Button
        android:id="@+id/buttonModule5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_rectangle"
        android:text="@string/module5"
        app:backgroundTint="#4CAF50" />

</LinearLayout>